--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     <label for="startDate">Date Learned:</label>
     <input type="date" id="startDate">
 
+    <label for="learnTime">Time Learned:</label>
+    <input type="time" id="learnTime">
+
+    <label for="testDate">Test Date:</label>
+    <input type="date" id="testDate">
+
     <button onclick="generateSchedule()">Generate Review Schedule</button>
 
     <div class="output" id="output"></div>
@@ -62,20 +68,29 @@
     function generateSchedule() {
       const topic = document.getElementById("topic").value;
       const startDate = new Date(document.getElementById("startDate").value);
+      const learnTime = document.getElementById("learnTime").value;
+      const testDate = new Date(document.getElementById("testDate").value);
       const output = document.getElementById("output");
 
-      if (!topic || !startDate.getTime()) {
-        output.innerHTML = '<p>Please enter both the topic and date.</p>';
+      if (!topic || !startDate.getTime() || !learnTime || !testDate.getTime()) {
+        output.innerHTML = '<p>Please enter all required fields.</p>';
         return;
       }
 
-      const days = [1, 3, 7, 14, 30];
+      const reviewTimes = [1, 3, 7, 14, 30];
       let html = `<h3>Review Schedule for "${topic}"</h3><ul>`;
 
-      days.forEach(day => {
+      reviewTimes.forEach(day => {
         const reviewDate = new Date(startDate);
         reviewDate.setDate(reviewDate.getDate() + day);
-        html += `<li>Review on: <strong>${reviewDate.toDateString()}</strong> (Day ${day})</li>`;
+
+        const [hours, minutes] = learnTime.split(":");
+        reviewDate.setHours(parseInt(hours));
+        reviewDate.setMinutes(parseInt(minutes));
+
+        if (reviewDate <= testDate) {
+          html += `<li>Review on: <strong>${reviewDate.toLocaleString()}</strong> (Day ${day})</li>`;
+        }
       });
 
       html += '</ul>';
@@ -84,3 +99,4 @@
   </script>
 </body>
 </html>
+
