--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       color: white;
       border: none;
       margin-top: 1.5rem;
+      cursor: pointer;
     }
     .output {
       margin-top: 2rem;
@@ -51,6 +52,11 @@
       border-radius: 10px;
       font-size: 1rem;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    .calendar-link {
+      display: block;
+      margin: 0.5rem 0;
+      text-align: center;
     }
   </style>
 </head>
@@ -80,6 +86,15 @@
   </div>
 
   <script>
+    function generateICSFile(topic, date) {
+      const dtStart = date.toISOString().replace(/[-:]|\.\d{3}/g, '').slice(0, 15);
+      const dtEnd = new Date(date.getTime() + 30 * 60000).toISOString().replace(/[-:]|\.\d{3}/g, '').slice(0, 15);
+
+      const content = `BEGIN:VCALENDAR\nVERSION:2.0\nBEGIN:VEVENT\nSUMMARY:Review ${topic}\nDTSTART:${dtStart}\nDTEND:${dtEnd}\nDESCRIPTION:Spaced repetition review for ${topic}\nEND:VEVENT\nEND:VCALENDAR`;
+      const blob = new Blob([content], { type: 'text/calendar' });
+      return URL.createObjectURL(blob);
+    }
+
     function generateSchedule() {
       const topic = document.getElementById("topic").value;
       const startDate = new Date(document.getElementById("startDate").value);
@@ -104,7 +119,9 @@
         reviewDate.setMinutes(parseInt(minutes));
 
         if (reviewDate <= testDate) {
-          html += `<li>Review on: <strong>${reviewDate.toLocaleString()}</strong> (Day ${day})</li>`;
+          const calendarURL = generateICSFile(topic, reviewDate);
+          html += `<li>Review on: <strong>${reviewDate.toLocaleString()}</strong> (Day ${day})<br>
+                   <a class="calendar-link" href="${calendarURL}" download="review-${topic}-day${day}.ics">➕ Add to Calendar</a></li>`;
         }
       });
 
@@ -116,4 +133,3 @@
   </script>
 </body>
 </html>
-
