--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
       display: block;
       margin-top: 1rem;
     }
-    input, select {
+    input, select, button {
       width: 100%;
       padding: 0.75rem;
       margin-top: 0.5rem;
       border-radius: 5px;
       border: 1px solid #ccc;
+    }
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      margin-top: 1.5rem;
+      cursor: pointer;
     }
     .output {
       margin-top: 2rem;
@@ -87,6 +94,8 @@
       <option value="procedural">Problem Solving / Practice</option>
       <option value="visual">Diagrams / Visual Interpretation</option>
     </select>
+
+    <button onclick="generateSchedule()">Generate Review Schedule</button>
 
     <div class="output" id="output"></div>
   </div>
